# gtest-tesults

./: CMakeLists.txt  LICENSE  README.md
cmake/: gtest-tesultsConfig.cmake.in  tesults-gtestConfig.cmake.in
examples/: main.cpp
include/gtest_tesults/: gtest_tesults.h
include/tesults_gtest/: tesults_gtest.h
